# NTUST-ml-bigdata

./: .gitignore  README.md  pyproject.toml
final/: README.md  app.py  data_analysis.py  get_test_data.py  main2.py  train.py  train2.py  xgb_ecg_model.joblib
final/datasets/: README.md
hw1/: main.py
hw1/datasets/: README.md
hw2/: README.md  main.py
hw3/: README.md  extent.py  main.py
hw4/: README.md  main.py
hw4/datasets/: video_games_sales.csv
notes/: Quiz.md  W10.md  W11.md  W12.md  W3.md  W4.md  W5.md  W6.md  W8.md  W9.md  midterm_exam.md
